--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -1,35 +1,13 @@
-.projects-container {
-  padding: 60px;
-  background: linear-gradient(135deg, #101820, #1c1f2a);
-  color: white;
-  height: 80vh;
-  border-radius: 20px;
-  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.5); /* Stronger shadow for depth */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  backdrop-filter: blur(8px); /* Glassmorphism effect */
-  border: 1px solid rgba(255, 255, 255, 0.1);
-}
-
 h1 {
-  color: #a359ff; /* Gradient-inspired color */
+  color: #a359ff; 
   font-size: 2.5rem;
   margin-bottom: 30px;
   font-family: 'Arial', sans-serif;
   text-align: center;
-  letter-spacing: 2px; /* Enhance text appearance */
-  text-shadow: 0px 4px 10px rgba(90, 15, 175, 0.7); /* Glowing effect */
+  letter-spacing: 2px; 
+  text-shadow: 0px 4px 10px rgba(90, 15, 175, 0.7); 
 }
 
-.project-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 30px;
-  justify-items: center;
-  padding: 20px;
-}
 
 .project-card {
   background: linear-gradient(145deg, #682c8f, #5a0faf);
@@ -38,28 +16,28 @@ h1 {
   height: 90%;
   box-shadow: 
     0 8px 15px rgba(0, 0, 0, 0.2), 
-    inset 0 -5px 10px rgba(0, 0, 0, 0.3); /* Inner shadow for 3D effect */
+    inset 0 -5px 10px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  transition: all 0.4s ease; /* Smooth transitions */
-  opacity: 0.95; /* Subtle transparency for a sleek look */
+  transition: all 0.4s ease; 
+  opacity: 0.95;
 }
 
 .project-card:hover {
-  transform: scale(1.03); /* Subtle zoom on hover */
+  transform: scale(1.03); 
   box-shadow: 
     0 15px 25px rgba(0, 0, 0, 0.3), 
-    inset 0 -7px 15px rgba(0, 0, 0, 0.35); /* Stronger shadows */
+    inset 0 -7px 15px rgba(0, 0, 0, 0.35); 
   opacity: 1;
 }
 
 .project-card h2 {
-  color: #e0d7ff; /* Softer color for readability */
+  color: #e0d7ff; 
   font-size: 1.8rem;
   margin-bottom: 12px;
   font-family: 'Arial', sans-serif;
-  text-shadow: 0px 2px 8px rgba(255, 255, 255, 0.6); /* Soft text glow */
+  text-shadow: 0px 2px 8px rgba(255, 255, 255, 0.6); 
   letter-spacing: 1px;
 }
 
@@ -71,6 +49,12 @@ h1 {
   text-align: justify;
 }
 
+.project-card img {
+  width: 100%; 
+  height: 250px;
+  object-fit: cover; 
+  border-radius: 8px; 
+}
 .project-card a {
   margin-top: 12px;
   text-decoration: none;
@@ -86,10 +70,9 @@ h1 {
 
 .project-card a:hover {
   background-color: #3e07a3;
-  transform: translateY(-3px); /* Gentle lift on hover */
+  transform: translateY(-3px); 
 }
 
-/* Responsive Typography */
 @media (max-width: 768px) {
   .projects-container {
     padding: 40px;
