--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,4 +1,3 @@
-Global Styles
 html {
     scroll-behavior: smooth;
   }
@@ -14,9 +13,11 @@ html {
   .App {
     text-align: center;
   }
-  
- 
-  
+.classy{
+  font-size: 75px;
+  font-family: 'Times New Roman', Times, serif;
+  color: #efebf188;
+}
   .nav-links a {
     color: #ffffff;
     text-decoration: none;
@@ -41,7 +42,7 @@ html {
   }
   
   .hero-content h1 {
-    font-size: 3rem;
+    font-size: 2rem;
     margin-bottom: 20px;
   }
   
@@ -87,8 +88,6 @@ html {
     height: auto;
     border-radius: 5px;
   }
-  
-  /* Skills Section */
   .skills-list {
     display: flex;
     flex-wrap: wrap;
@@ -103,15 +102,6 @@ html {
     color: #ffffff;
     font-size: 1rem;
   }
-  
-  /* Testimonials Section */
-  .testimonials-container {
-    background-color: #101820;
-    padding: 50px;
-    color: #afdde5;
-  }
-  
-  /* Contact Section */
   .contact-container {
     background-color: #1c1c1c;
     padding: 50px;
