--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -72,6 +72,12 @@ h1 {
   background-color: #3e07a3;
   transform: translateY(-3px); 
 }
+.project-card img {
+  width: 100%;
+  height: 300px; 
+  object-fit: cover;
+  border-radius: 8px; 
+}
 
 @media (max-width: 768px) {
   .projects-container {
